[package]
name = "myloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = {version = "0.38.0",features = ["Win32_Security","Win32_System_Diagnostics_Debug","Win32_System_Memory","Win32_System_LibraryLoader","Win32_System_Threading","Win32_UI_WindowsAndMessaging","Win32_Foundation","Win32_System_Diagnostics_ToolHelp"]}
libaes = "0.6.1"
base64 = "0.13.0"
obfstr = "0.3.0"


[profile.release]
lto = true
opt-level = "z"               # 使用稍高一些的优化级别，最低是0，最高是3
overflow-checks = false
strip = "symbols"
codegen-units = 1
panic = 'abort'

# 编译优化--out-dir ../
#cargo build -Z build-std=std,panic_abort -Z build-std-features=panic_immediate_abort -Z unstable-options  --target x86_64-pc-windows-msvc  --release
#安装nightly
#$ rustup install nightly
#将nightly设置为默认
#$ rustup default nightly
#查看rust版本
#$ rustc --version
#安装msvc nightly toolchain
#rustup target add nightly-x86_64-pc-windows-msvc  / rustup toolchain install nightly-x86_64-pc-windows-msvc
